css/template.css
@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900');

::-webkit-scrollbar {
  /* This is the magic bit */
  display: none;
}

.body {
    padding: 0px;
    margin: 0px;
    font-family: 'Lato', sans-serif !important;
    font-weight: 900;
    overflow: hidden;
}

.header {
    background-color: #34BB66;
    height: 50px;
    width: 100%;
    margin-top: 0px;
}

#notif {
    height: 18px;
    float: right;
    margin-top: 15px;
    margin-right: 3%;
}

.page-title {
    text-align: center;
    vertical-align: middle;
}

#pin-location {
    height: 20px;
    margin-right: 5px;
    display: inline-block;
    margin-top: -5px;
}

#header-text {
    margin-top: 13px;
    display: inline-block;
    color: #ffffff;
    font-family: 'Lato', sans-serif;
    font-weight: 700;
    font-size: 18px;
}

.back {
    height: 20px;
    float: left;
    margin-top: 15px;
    margin-left: 3%;
}

.content {
    margin-bottom: 10%;
    max-height: 100%;
    overflow:auto;
    padding-bottom: 10%;
    font-family: 'Lato', sans-serif;
    font-weight: 400;
    font-size: 18px;
}

.activity-form, .profile-form {
    margin-top: 45px;
    font-size: 16px;
}

.form-label {
    height: auto;
    width: 35px;
    margin-top: 5%;
}

input:focus,
select:focus,
textarea:focus,
button:focus {
    outline: none;
}

#activity-type, .form-field {
    width: 100%;
    height: 35px;
    margin-bottom: 20px;
    border: none;
    border-bottom: solid 2px #34BB66;
}

#activity-type {
    -webkit-appearance: none;
    -moz-appearance: none;
}

#date-from, #time-from  {
    height: 35px;
    width: 100%;
    margin-bottom: 10px;
    border: none;
    border-bottom: solid 2px #34BB66;
}

#date-to, #time-to, #time-validity, #date-validity {
    height: 35px;
    width: 100%;
    margin-bottom: 20px;
    border: none;
    border-bottom: solid 2px #34BB66;
}

.btn {
    background-color: #34BB66;
    color: #ffffff;
    box-sizing: border-box;
    line-height: 2;
}

.btn:hover {
    background-color: none;
    color: #ffffff;
    box-sizing: border-box;
}

.fa-chevron-right {
    margin-left: 10%;
    font-size: 12px;
    font-weight: 100;
}

.activity-image {
    background-color: #d3d3d3;
    width: 100%;
    height: 166px;
    /*border: solid 1px #000000;*/
    margin-bottom: 20px;
}

.login {
    width: 100%;
    height: 100%;
    font-family: 'Lato', sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.login h1 {
    font-size: 60px;
    color: #34BB66;
    font-weight: 700;
}

.fb-btn {
    background-color: #3b5998;
    width: 80%;
    font-size: 20px;
    margin-top: 10%;
    margin-bottom: 10%;
    font-weight: 300;
}

.google-btn {
    background-color: #d62d20;
    width: 80%;
    font-size: 20px;
    margin-top: 10%;
    margin-bottom: 10%;
    font-weight: 300;
}

.fa-facebook-official, .fa-google {
    margin-right: 10px;
}

.footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 45px;
    padding-top: 7px;
    padding-bottom: 8px;
    margin-right: 10px;
    border-top: solid 1px #d3d3d3;
    background-color: #ffffff;
}

.footer img {
    height: 20px;
}

.footer ul {
    text-align: justify;
    padding-left: 3%;
    padding-right: 3%;
    /*padding-top: 3px;*/
}

.footer ul:after {
    content: '';
    display: inline-block;
    width: 100%;
}

.footer ul:before {
    content: '';
    display: block;
}

.footer ul>li {
    display: inline;
}

.centered {
    text-align: center;
    color: #000;
    text-decoration: none;
}

.justify {
    text-align: justify;
}

.left {
    text-align: left;
}

.right {
    text-align: right;
}

.launch {
    background-color: #34BB66;
    height: 100%;
    width: 100%;
    color: #ffffff;
    font-family: 'Lato', sans-serif;
    font-weight: 900;
    font-size: 72px;
    display: flex;
    justify-content: center;
    align-items: center;
}

a:hover {
    text-decoration: none;
}

/*.row {
    margin-left: 0;
    margin-right: 0;
}*/

.card {
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    width: 100%;
    padding-bottom: 1%;
    margin-bottom: 5%;
    margin-top: 5%;
}

.card a{
    text-decoration: none;
}

.card ul{
    width: 100%;
    padding-left: 1%;
    padding-right: 1%;
    margin-top: 3%;
    margin-bottom: 3%;;
}

.card ul>li{
    display: inline;
    padding-top: 5px;
    padding-left: 3px;
    padding-right: 3px;
}

.card p{
    display: inline;
}

.card li>img {
    height: 20px;
    margin: 2px;
}

.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.img {
    width: 100%;
    height: auto;
}

.default-card{
    background: #FCD049;
    height: 175px;
    width: auto;
    opacity: 0.8;
}

.tour-card{
    background: #FCD049;
    height: 175px;
    width: auto;
    opacity: 0.8;
}

.food-card{
    background: #27ae60;
    height: 175px;
    width: auto;
    opacity: 0.8;
}

.adv-card{
    background: #bb6bd9;
    height: 175px;
    width: auto;
    opacity: 0.8;
}

.sports-card{
    background: #FCD049;
    height: 175px;
    width: auto;
    opacity: 0.8;
}

.movie-card{
    background: #FCD049;
    height: 175px;
    width: auto;
    opacity: 0.8;
}

.camping-card{
    background: #FCD049;
    height: 175px;
    width: auto;
    opacity: 0.8;
}

.trekking-card{
    background: #FCD049;
    height: 175px;
    width: auto;
    opacity: 0.8;
}

.card-overlay-details{
    padding-top: 18%;
}

.card .card-overlay-details img{
    height: 24px;
    padding-right: 5px;
}

.card .card-overlay-details p{
    display: inline;
    font-size: 18px;
}

.card .card-overlay-details li{
    display: inline;
    padding-left: 5px;
    padding-right: 5px;
    color: #ffffff;
}

.card-overlay-details .group {
    float: right;
}

.icon-top-right{
    height: 20px;
    margin-top: 1%;
    float:right;
    opacity: 0.6;
}

.icon-top-right-interested{
    height: 20px;
    margin-top: 1%;
    float:right;
}

.card-heading {
    display: inline;
    color: #ffffff;
}

.home-top-nav {
    width: 100%;
    height: 45px;;
    margin-bottom: 5%;
}

.home-top-nav button {
    height: 100%;
    background-color: #ffffff;
    padding: 10px 24px;
    color: #000000;
    border: none;
    border-right: solid 1px #d3d3d3;
    border-bottom: solid 1px #d3d3d3;
    font-size: 16px;
    width: 100%;
}

.home-top-nav .active-btn {
    border-bottom: solid 2px #34BB66;
}

.home-btn {
    margin: 1%;
    border-radius: 30px;
}

.home-nav-container{
    background-color: #fff;
    border-bottom: solid 1px #d3d3d3;
    padding: 2%;
}

.overlay-btn{
    position: static;
    margin-left: 82%;
    width: auto;
    height: 50px;
}

.activity-label-right {
    width: 35px;
    height: auto;
    text-align: center;
    margin-bottom: 15px;
    margin-left: 180px;
}

.activity-text-right {
    padding-top: 5px;
}

.activity-label {
    width: 35px;
    height: auto;
    text-align: center;
    margin-bottom: 15px;
}

.activity-label-only {
    width: 35px;
    height: auto;
    text-align: center;
    margin-bottom: 15px;
    margin-left: 75px;
}

.activity-text {
    padding-top: 5px;
    padding-left: 10px;
}

.activity-text-only {
    padding-left: 40px;
}

.activity-details{
    padding-left: 10px;
    padding-right: 10px;
    align-content: center;
}

.activity-badges {
    display: inline-block;
    margin-right: 15px;
}

.activity-badges img {
    width: 40px;
}

/*---------------------- Ling ----------------------------*/

.settings-container {
    background-color: #F8F8F8;
    height: 100%;
}

.settings-container img {
    width: 8%;
    display: inline-block;
}

.help {
    background-color: white;
    font-family: lato;
    font-size:16px ;
    margin-top: 3%;
    padding-bottom: 3%;
    padding-left: 5%;
}

.privacy {
    border-top: thin solid #E8E8E8;
    background-color: white;
    font-family: lato;
    font-size:16px;
    padding-top: 3%;
    padding-bottom: 3%;
    padding-left: 5%;
}

#firstp {
    padding-left: 5%;
    display: inline-block;
}

#lastp {
    padding-left: 5%;
    display: inline-block;
}

.logout p {
    margin-top: 8%;
    color: red;
    text-align: center;
    background-color: white;
    padding-top: 5%;
    padding-bottom: 5%;
    font-family: lato;
    font-size:16px ;
}

.notif-container {
    background-color: #F8F8F8;
    height: 100%;
}

.notif-container img {
    width: 11%;
    display: inline-block;
}

.person1 {
    background-color: white;
    font-family: lato;
    font-size:16px ;
    margin-top: 3%;
    padding-bottom: 2%;
    padding-left: 5%;
}

.person2 {
    border-top: thin solid #E8E8E8;
    background-color: white;
    font-family: lato;
    font-size:16px;
    padding-top: 3%;
    padding-bottom: 2%;
    padding-left: 5%;
}

.person3 {
    border-top: thin solid #E8E8E8;
    background-color: white;
    font-family: lato;
    font-size:16px;
    padding-top: 3%;
    padding-bottom: 2%;
    padding-left: 5%;
}

.notif-title {
    padding-left: 5%;
    display: inline-block;
    width: 75%;
}

.notif-host {
    font-family: lato;
    font-size:14px;
    color: grey;
    padding-left: 17%;
}

.notif-time {
    display: inline-block;
    font-size:14px;
    color: grey;
    width: 10%;
}

































/***********************************************Purva***********************************************/
.top-nav {
    width: 100%;
    height: 45px;;
    margin-bottom: 5%;
}

.top-nav button {
    height: 100%;
    background-color: #ffffff;
    float: left;
    padding: 10px 24px;
    color: #000000;
    border: none;
    border-right: solid 1px #d3d3d3;
    border-bottom: solid 1px #d3d3d3;
    width: 33.3%;
    font-size: 16px;
}

.top-nav .active-btn {
    border-bottom: solid 2px #34BB66;
}

.profile-pic {
    width: auto;
    max-width: 150px;
    clear: both;
    margin-bottom: 40px;
}

.pic-edit {
    width: 100%;
    max-width: 35px;
    margin-right: 30px;
}

.profile-label {
    width: 35px;
    height: auto;
    text-align: center;
    margin-bottom: 15px;
}

.profile-text {
    padding-top: 5px;
}

.p-interests {
    display: inline-block;
    width: auto;
    border-radius: 25px;
    padding: 10px 20px;
    color: #ffffff;
    margin-right: 3%;
    margin-bottom: 20px;
}

.food {
    background-color: #FCD049;
}

.trekking {
    background-color: #27AE60;
}

.adv {
    background-color: #BB6BD9;
}

.badge-container {
    margin-right: 30px;
}

.badges {
    display: inline-grid;
    margin-right: 10px;
    margin-left: 5px;
}

.badges img {
    width: 100%;
    min-width: 60px;
    max-width: 70px;
}

.count {
    display: block;
    padding-top: 5px;
    font-size: 16px;
    color: #757575;
    text-align: center;
}

.profile-field {
    width: 100%;
    height: 35px;
    margin-bottom: 20px;
    border: none;
    border-bottom: solid 2px #34BB66;
}

/*secondary buttons*/
.sec-btn {
    min-height: 35px;
    max-height: 100%;
    width: auto;
    line-height: 1;
    white-space: normal;
    margin-bottom: 20px;
}

/*primary buttons - for form submit action*/
.submit-btn {
    position: absolute;
    bottom: 70px;
    left: 50%;
    width: 100px;
    margin-left:-50px;
}

.searchbar {
    width: 100%;
    height: 50px;
    border: solid 1px #d3d3d3;
    padding-left: 40px;
    font-size: 16px;
}

#search-back {
    height: 20px;
    position: fixed;
    top: 65px;
    left: 10px;
}

#search-mic {
    height: 20px;
    position: fixed;
    top: 65px;
    right: 10px;
}

